hphp/test/zend/good/ext/standard/tests/streams/stream_context_set_option_error_002.php
<?php
var_dump(stream_context_set_option());

$context = stream_context_create();
var_dump(stream_context_set_option($context));
?>